Add ContainedValues and AccessPath classes
Test and integrate them